--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:dev": "tsx watch src/server.ts",
     "migrations:dev": "prisma migrate dev"
   },
-  "packageManager": "pnpm@10.4.1",
+  "packageManager": "pnpm@10.5.2",
   "dependencies": {
     "@fastify/cors": "^10.0.2",
     "@fastify/swagger": "^9.4.2",
@@ -18,6 +18,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@types/node": "^22.13.4",
     "prisma": "^6.4.1",
     "tsx": "^4.19.3",
@@ -25,7 +26,11 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "@prisma/client"
+      "@biomejs/biome",
+      "@prisma/client",
+      "@prisma/engines",
+      "esbuild",
+      "prisma"
     ]
   }
 }
