feat: implement docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,32 @@
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    environment:
+      - NODE_ENV=production
+      - DATABASE_URL=postgresql://docker:docker@postgres:5432/x_finances?schema=public
+    ports:
+      - "3333:3333"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: always
   postgres:
     image: bitnami/postgresql:latest
     environment:
-      - POSTGRES_USER=docker
-      - POSTGRES_PASSWORD=docker
-      - POSTGRES_DB=x_finances
+      - POSTGRESQL_USERNAME=docker
+      - POSTGRESQL_PASSWORD=docker
+      - POSTGRESQL_DATABASE=x_finances
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/bitnami/postgresql
-
+    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U docker"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 volumes:
   postgres_data:
